feat: Nitrite join/association support - WIP
- Enable previously excluded TCK tests for joins/associations
- Fix NitritePredicateVisitor to handle non-embedded associations correctly
- Fix visitIsNull/visitIsNotNull to use association field names (author_id not author.id)
- Fix getFieldNameInternal to stop at non-embedded associations
- Entity mapper now loads associations via helper callbacks
- mappedBy associations are populated on fetch

Test results: 31/36 passing (5 failing)
- 2 optimistic locking tests: version field not initialized
- 3 projection/join tests: need further investigation

Co-authored-by: Qwen-Coder <qwen-coder@alibabacloud.com>