@@ -1,14 +1,14 @@
 /*
  * Copyright 2017-2026 original authors
  *
- * Licensed under the Apache License, Version 2.0 (the "License");
+ * Licensed under the Apache License, Version 2.0 (the \"License\");
  * you may not use this file except in compliance with the License.
  * You may obtain a copy of the License at
  *
  * https://www.apache.org/licenses/LICENSE-2.0
  *
  * Unless required by applicable law or agreed to in writing, software
- * distributed under the License is distributed on an "AS IS" BASIS,
+ * distributed under the License is distributed on an \"AS IS\" BASIS,
  * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  * See the License for the specific language governing permissions and
  * limitations under the License.
@@ -16,8 +16,8 @@
 package io.micronaut.data.nitrite.model.query.builder;
 
 import io.micronaut.core.annotation.AnnotationMetadata;
-import io.micronaut.core.annotation.Introspected;
 import io.micronaut.core.annotation.Internal;
+import io.micronaut.core.annotation.Introspected;
 import io.micronaut.core.annotation.NonNull;
 import io.micronaut.core.annotation.TypeHint;
 import io.micronaut.core.util.ArgumentUtils;
@@ -26,71 +26,37 @@ import io.micronaut.data.model.PersistentEntity;
 import io.micronaut.data.model.PersistentProperty;
 import io.micronaut.data.model.Sort;
 import io.micronaut.data.model.jpa.criteria.IPredicate;
-import io.micronaut.data.model.jpa.criteria.PersistentPropertyPath;
 import io.micronaut.data.model.jpa.criteria.impl.CriteriaUtils;
-import io.micronaut.data.model.query.QueryModel;
 import io.micronaut.data.model.query.BindingParameter;
+import io.micronaut.data.model.query.QueryModel;
 import io.micronaut.data.model.query.builder.QueryBuilder;
 import io.micronaut.data.model.query.builder.QueryBuilder2;
 import io.micronaut.data.model.query.builder.QueryResult;
 import jakarta.persistence.criteria.Order;
 import jakarta.persistence.criteria.Predicate;
+import java.util.ArrayList;
 import java.util.Collections;
 import java.util.LinkedHashMap;
 import java.util.List;
 import java.util.Map;
+import org.slf4j.Logger;
+import org.slf4j.LoggerFactory;
 
 /**
  * NitriteDB query builder implementing both QueryBuilder and QueryBuilder2 for compatibility.
  * Primary implementation uses JPA Criteria (QueryBuilder2) to align with Micronaut Data 5.0.x.
- *
- * <h2>Design notes</h2>
- *
- * <ul>
- *   <li>Micronaut Data’s annotation processor uses {@link QueryResult#getAdditionalRequiredParameters()}
- *       to determine which <em>repository method parameters</em> must be present so it can bind them
- *       into the generated query. This is a compile-time contract. Do not use that map as a generic
- *       metadata channel (for example, do not put markers like {@code "update" -> "true"} or {@code
- *       "delete" -> "true"}) — it will cause compilation failures for implicit {@code CrudRepository}
- *       methods when {@code implicitQueries=true}.</li>
- *   <li>Update queries are serialized as a JSON object that may include a {@code "$set"} key. The
- *       values inside {@code "$set"} must be encoded as {@link #QUERY_PARAMETER_PLACEHOLDER}
- *       placeholders (for bindable parameters) so the runtime can bind them from
- *       {@link io.micronaut.data.model.runtime.PreparedQuery#getParameterArray()}.</li>
- * </ul>
  */
 @Internal
 @Introspected
 @TypeHint(NitriteQueryBuilder.class)
 public final class NitriteQueryBuilder implements QueryBuilder, QueryBuilder2 {
 
-  /**
-   * Placeholder prefix used to embed parameter indices in the serialized JSON query. Parsed at
-   * runtime by {@code DefaultNitriteRepositoryOperations}.
-   *
-   * <p>Format: {@code "$mn_qp:<index>"} where {@code <index>} is the position of the
-   * {@link io.micronaut.data.model.query.builder.QueryParameterBinding} in the prepared query.
-   */
   public static final String QUERY_PARAMETER_PLACEHOLDER = "$mn_qp";
+  private static final Logger LOG = LoggerFactory.getLogger(NitriteQueryBuilder.class);
 
-  /**
-   * Default constructor required for reflective instantiation and service loading.
-   *
-   * <p>Nitrite does not currently require repository-level annotation metadata to build criteria
-   * queries.
-   */
   public NitriteQueryBuilder() {
   }
 
-  /**
-   * Metadata constructor used by some Micronaut Data versions.
-   *
-   * <p>The parameter is intentionally unused; it is kept for signature parity with other modules
-   * and for forward compatibility with Micronaut Data 5.0.x where query builder instantiation
-   * rules may differ.
-   *
-   * @param annotationMetadata Repository annotation metadata
-   */
   public NitriteQueryBuilder(AnnotationMetadata annotationMetadata) {
   }
 
@@ -111,9 +77,41 @@ public final class NitriteQueryBuilder implements QueryBuilder, QueryBuilder2 {
   @Override
   public QueryResult buildQuery(
       @NonNull final AnnotationMetadata annotationMetadata, @NonNull final QueryModel query) {
-    // Provide minimal support for QueryModel to avoid AP errors, but prefer buildSelect (Criteria)
+    ArgumentUtils.requireNonNull("annotationMetadata", annotationMetadata);
+    ArgumentUtils.requireNonNull("query", query);
+
+    NitriteQueryState queryState = new NitriteQueryState(query.getPersistentEntity(), true);
+    Map<String, Object> predicateObj = buildWhereClauseFromQueryModel(query.getCriteria(), queryState);
+    
+    if (LOG.isDebugEnabled()) {
+        LOG.debug("buildQuery: entity={}, criteria={}, predicateObj={}", query.getPersistentEntity().getName(), query.getCriteria(), predicateObj);
+    }
+
+    Sort sort = query.getSort();
+    Map<String, Object> sortObj = new LinkedHashMap<>();
+    if (sort.isSorted()) {
+        for (Sort.Order order : sort.getOrderBy()) {
+            sortObj.put(order.getProperty(), order.isAscending() ? 1 : -1);
+        }
+    }
+
+    Map<String, Object> topLevel = new LinkedHashMap<>();
+    if (!predicateObj.isEmpty()) {
+      topLevel.putAll(predicateObj);
+    }
+    if (!sortObj.isEmpty()) {
+      topLevel.put("$sort", sortObj);
+    }
+    if (query.getOffset() > 0) {
+      topLevel.put("$skip", (int) query.getOffset());
+    }
+    if (query.getMax() != -1) {
+      topLevel.put("$limit", query.getMax());
+    }
+
+    String queryString = topLevel.isEmpty() ? "{}" : NitritePredicateVisitor.toJsonString(topLevel);
     return QueryResult.of(
-        "{}", Collections.emptyList(), Collections.emptyList(), Collections.emptyMap());
+        queryString, Collections.emptyList(), queryState.getParameterBindings());
   }
 
   @Override
@@ -121,8 +119,8 @@ public final class NitriteQueryBuilder implements QueryBuilder, QueryBuilder2 {
       @NonNull final AnnotationMetadata annotationMetadata,
       @NonNull final QueryModel query,
       @NonNull final List<String> propertiesToUpdate) {
-    return QueryResult.of(
-        "{}", Collections.emptyList(), Collections.emptyList(), Collections.emptyMap());
+    throw new IllegalStateException(
+        "Only 'buildUpdate' with 'Map<String, Object> propertiesToUpdate' is supported");
   }
 
   @Override
@@ -130,15 +128,137 @@ public final class NitriteQueryBuilder implements QueryBuilder, QueryBuilder2 {
       @NonNull final AnnotationMetadata annotationMetadata,
       @NonNull final QueryModel query,
       @NonNull final Map<String, Object> propertiesToUpdate) {
+    ArgumentUtils.requireNonNull("annotationMetadata", annotationMetadata);
+    ArgumentUtils.requireNonNull("query", query);
+    ArgumentUtils.requireNonNull("propertiesToUpdate", propertiesToUpdate);
+
+    NitriteQueryState queryState = new NitriteQueryState(query.getPersistentEntity(), true);
+    Map<String, Object> predicateObj = buildWhereClauseFromQueryModel(query.getCriteria(), queryState);
+
+    Map<String, Object> setObj = new LinkedHashMap<>();
+    for (Map.Entry<String, Object> entry : propertiesToUpdate.entrySet()) {
+      String fieldName = entry.getKey();
+      Object value = entry.getValue();
+      if (value instanceof BindingParameter bindingParameter) {
+        PersistentProperty property = query.getPersistentEntity().getPropertyByName(fieldName);
+        io.micronaut.data.model.PersistentPropertyPath propertyPath =
+            property != null ? io.micronaut.data.model.PersistentPropertyPath.of(Collections.emptyList(), property, property.getName()) : null;
+        int index =
+            queryState.pushParameter(
+                bindingParameter, NitritePredicateVisitor.newBindingContext(propertyPath));
+        setObj.put(fieldName, QUERY_PARAMETER_PLACEHOLDER + ":" + index);
+      } else {
+        setObj.put(fieldName, value);
+      }
+    }
+
+    Map<String, Object> topLevel = new LinkedHashMap<>();
+    if (!predicateObj.isEmpty()) {
+      topLevel.putAll(predicateObj);
+    }
+    if (!setObj.isEmpty()) {
+      topLevel.put("$set", setObj);
+    }
+
+    String queryString = topLevel.isEmpty() ? "{}" : NitritePredicateVisitor.toJsonString(topLevel);
     return QueryResult.of(
-        "{}", Collections.emptyList(), Collections.emptyList(), Collections.emptyMap());
+        queryString, Collections.emptyList(), queryState.getParameterBindings());
   }
 
   @Override
   public QueryResult buildDelete(
       @NonNull final AnnotationMetadata annotationMetadata, @NonNull final QueryModel query) {
+    ArgumentUtils.requireNonNull("annotationMetadata", annotationMetadata);
+    ArgumentUtils.requireNonNull("query", query);
+
+    NitriteQueryState queryState = new NitriteQueryState(query.getPersistentEntity(), true);
+    Map<String, Object> predicateObj = buildWhereClauseFromQueryModel(query.getCriteria(), queryState);
+    String queryString =
+        predicateObj.isEmpty() ? "{}" : NitritePredicateVisitor.toJsonString(predicateObj);
     return QueryResult.of(
-        "{}", Collections.emptyList(), Collections.emptyList(), Collections.emptyMap());
+        queryString, Collections.emptyList(), queryState.getParameterBindings());
+  }
+
+  private Map<String, Object> buildWhereClauseFromQueryModel(
+      final QueryModel.Junction criteria, final NitriteQueryState queryState) {
+    if (criteria == null || criteria.isEmpty()) {
+      return Map.of();
+    }
+    Map<String, Object> queryMap = new LinkedHashMap<>();
+    handleJunction(queryMap, criteria, queryState);
+    return queryMap;
+  }
+
+  private void handleJunction(Map<String, Object> queryMap, QueryModel.Junction junction, NitriteQueryState queryState) {
+    String operator = junction instanceof QueryModel.Conjunction ? "$and" : "$or";
+    List<Object> criteriaList = new ArrayList<>();
+    for (QueryModel.Criterion criterion : junction.getCriteria()) {
+        Map<String, Object> criterionMap = new LinkedHashMap<>();
+        handleCriterion(criterionMap, criterion, queryState);
+        if (!criterionMap.isEmpty()) {
+            criteriaList.add(criterionMap);
+        }
+    }
+    if (criteriaList.size() == 1) {
+        queryMap.putAll((Map<String, Object>) criteriaList.get(0));
+    } else if (!criteriaList.isEmpty()) {
+        queryMap.put(operator, criteriaList);
+    }
+  }
+
+  private void handleCriterion(Map<String, Object> queryMap, QueryModel.Criterion criterion, NitriteQueryState queryState) {
+    if (LOG.isDebugEnabled()) {
+        LOG.debug("handleCriterion: criterion={}", criterion.getClass().getSimpleName());
+    }
+    if (criterion instanceof QueryModel.Junction junction) {
+        handleJunction(queryMap, junction, queryState);
+    } else if (criterion instanceof QueryModel.PropertyCriterion pc) {
+        String propertyName = pc.getProperty();
+        Object value = pc.getValue();
+        if (LOG.isDebugEnabled()) {
+            LOG.debug("handleCriterion: propertyName={}, value={}", propertyName, value);
+        }
+        io.micronaut.data.model.PersistentPropertyPath propertyPath = queryState.getEntity().getPropertyPath(propertyName);
+        String fieldName = propertyName;
+        if (propertyPath != null) {
+            fieldName = NitritePredicateVisitor.getFieldName(propertyPath);
+            if (LOG.isDebugEnabled()) {
+                LOG.debug("handleCriterion: fieldName from propertyPath={}", fieldName);
+            }
+        }
+
+        Object valueRep;
+        if (value instanceof BindingParameter bp) {
+            int index = queryState.pushParameter(bp, NitritePredicateVisitor.newBindingContext(propertyPath));
+            valueRep = QUERY_PARAMETER_PLACEHOLDER + ":" + index;
+        } else {
+            valueRep = value;
+        }
+
+        if (criterion instanceof QueryModel.Equals) {
+            queryMap.put(fieldName, valueRep);
+        } else if (criterion instanceof QueryModel.NotEquals) {
+            queryMap.put(fieldName, Map.of("$ne", valueRep));
+        } else if (criterion instanceof QueryModel.GreaterThan) {
+            queryMap.put(fieldName, Map.of("$gt", valueRep));
+        } else if (criterion instanceof QueryModel.GreaterThanEquals) {
+            queryMap.put(fieldName, Map.of("$gte", valueRep));
+        } else if (criterion instanceof QueryModel.LessThan) {
+            queryMap.put(fieldName, Map.of("$lt", valueRep));
+        } else if (criterion instanceof QueryModel.LessThanEquals) {
+            queryMap.put(fieldName, Map.of("$lte", valueRep));
+        } else if (criterion instanceof QueryModel.In) {
+            queryMap.put(fieldName, Map.of("$in", valueRep));
+        } else if (criterion instanceof QueryModel.NotIn) {
+            queryMap.put(fieldName, Map.of("$nin", valueRep));
+        } else if (criterion instanceof QueryModel.IsNull) {
+            queryMap.put(fieldName, null);
+        } else if (criterion instanceof QueryModel.IsNotNull) {
+            queryMap.put(fieldName, Map.of("$ne", null));
+        } else if (criterion instanceof QueryModel.IdEquals) {
+            queryMap.put(NitritePredicateVisitor.ID_FIELD, valueRep);
+        }
+    }
   }
 
   @Override
@@ -156,29 +276,27 @@ public final class NitriteQueryBuilder implements QueryBuilder, QueryBuilder2 {
         "", Collections.emptyList(), Collections.emptyList(), Collections.emptyMap());
   }
 
-  // --- QueryBuilder2 (Criteria API) implementation ---
-
   @Override
   public QueryResult buildSelect(
       @NonNull final AnnotationMetadata annotationMetadata,
       @NonNull final SelectQueryDefinition query) {
-    ArgumentUtils.requireNonNull("annotationMetadata", annotationMetadata);
-    ArgumentUtils.requireNonNull("selectQueryDefinition", query);
-
-    NitriteQueryState queryState = new NitriteQueryState(query, true);
+    if (LOG.isDebugEnabled()) {
+        LOG.debug("buildSelect: entity={}, predicate={}", query.persistentEntity().getName(), query.predicate());
+    }
+    NitriteQueryState queryState = new NitriteQueryState(query.persistentEntity(), true);
     Map<String, Object> predicateObj = new LinkedHashMap<>();
     Map<String, Object> sortObj = new LinkedHashMap<>();
 
     Predicate predicate = query.predicate();
     if (predicate != null) {
-      predicateObj = buildWhereClause(predicate, queryState);
+      predicateObj = buildWhereClauseFromCriteria(predicate, queryState);
     }
 
     List<Order> orders = query.order();
     if (!orders.isEmpty()) {
       orders.forEach(
           order -> {
-            PersistentPropertyPath<?> propertyPath =
+            io.micronaut.data.model.jpa.criteria.PersistentPropertyPath<?> propertyPath =
                 CriteriaUtils.requireProperty(order.getExpression());
             String fieldName = NitritePredicateVisitor.getFieldName(propertyPath.getPropertyPath());
             sortObj.put(fieldName, order.isAscending() ? 1 : -1);
@@ -208,11 +326,11 @@ public final class NitriteQueryBuilder implements QueryBuilder, QueryBuilder2 {
   public QueryResult buildUpdate(
       @NonNull final AnnotationMetadata annotationMetadata,
       @NonNull final UpdateQueryDefinition definition) {
-    NitriteQueryState queryState = new NitriteQueryState(definition, true);
+    NitriteQueryState queryState = new NitriteQueryState(definition.persistentEntity(), true);
     Predicate predicate = definition.predicate();
     Map<String, Object> predicateObj = new LinkedHashMap<>();
     if (predicate != null) {
-      predicateObj = buildWhereClause(predicate, queryState);
+      predicateObj = buildWhereClauseFromCriteria(predicate, queryState);
     }
 
     Map<String, Object> setObj = new LinkedHashMap<>();
@@ -224,13 +342,11 @@ public final class NitriteQueryBuilder implements QueryBuilder, QueryBuilder2 {
         if (value instanceof BindingParameter bindingParameter) {
           PersistentProperty property = definition.persistentEntity().getPropertyByName(fieldName);
           io.micronaut.data.model.PersistentPropertyPath propertyPath =
-              property != null ? new io.micronaut.data.model.PersistentPropertyPath(property) : null;
+              property != null ? io.micronaut.data.model.PersistentPropertyPath.of(Collections.emptyList(), property, property.getName()) : null;
           int index =
               queryState.pushParameter(
                   bindingParameter, NitritePredicateVisitor.newBindingContext(propertyPath));
           setObj.put(fieldName, QUERY_PARAMETER_PLACEHOLDER + ":" + index);
-        } else if (value instanceof String s && s.startsWith(QUERY_PARAMETER_PLACEHOLDER)) {
-          setObj.put(fieldName, s);
         } else {
           setObj.put(fieldName, value);
         }
@@ -246,9 +362,6 @@ public final class NitriteQueryBuilder implements QueryBuilder, QueryBuilder2 {
     }
 
     String queryString = topLevel.isEmpty() ? "{}" : NitritePredicateVisitor.toJsonString(topLevel);
-    // Note: QueryResult additionalRequiredParameters is used by the annotation processor to bind
-    // method parameters. It must not be used for metadata markers like "update=true" (that breaks
-    // implicit CrudRepository method generation).
     return QueryResult.of(
         queryString, Collections.<String>emptyList(), queryState.getParameterBindings());
   }
@@ -257,11 +370,11 @@ public final class NitriteQueryBuilder implements QueryBuilder, QueryBuilder2 {
   public QueryResult buildDelete(
       @NonNull final AnnotationMetadata annotationMetadata,
       @NonNull final DeleteQueryDefinition definition) {
-    NitriteQueryState queryState = new NitriteQueryState(definition, true);
+    NitriteQueryState queryState = new NitriteQueryState(definition.persistentEntity(), true);
     Predicate predicate = definition.predicate();
     Map<String, Object> predicateObj = new LinkedHashMap<>();
     if (predicate != null) {
-      predicateObj = buildWhereClause(predicate, queryState);
+      predicateObj = buildWhereClauseFromCriteria(predicate, queryState);
     }
     String queryString =
         predicateObj.isEmpty() ? "{}" : NitritePredicateVisitor.toJsonString(predicateObj);
@@ -276,22 +389,19 @@ public final class NitriteQueryBuilder implements QueryBuilder, QueryBuilder2 {
   public String buildLimitAndOffset(final long limit, final long offset) {
     Map<String, Object> obj = new LinkedHashMap<>();
     if (offset > 0) {
-      obj.put("$skip", offset);
+      obj.put("$skip", (int) offset);
     }
     if (limit > 0) {
-      obj.put("$limit", limit);
+      obj.put("$limit", (int) limit);
     }
     return obj.isEmpty() ? "{}" : NitritePredicateVisitor.toJsonString(obj);
   }
 
-  /**
-   * @return {@code true} if Nitrite query filters support regex matching
-   */
   public boolean supportsRegex() {
     return true;
   }
 
-  private Map<String, Object> buildWhereClause(
+  private Map<String, Object> buildWhereClauseFromCriteria(
       final Predicate predicate, final NitriteQueryState queryState) {
     if (predicate == null) {
       return Map.of();
